fixed typekit flicker and baseline

--- a/static/css/screen.css
+++ b/static/css/screen.css
@@ -58,7 +58,7 @@ body {
 }
 
 body.about {
-	background:  #333333;
+	background-color:  #333333;
 }
 
 /* @end */
@@ -446,8 +446,6 @@ h4 {
 	height: 100%;
 }
 
-
-
 	/* @group 5.1. HEADER & BRANDING 
 	------------------------------------- */
 	.site_header {
@@ -695,6 +693,11 @@ h4 {
 	    top:-1px;
 	    height: 388px;
 	    z-index: 0;
+	    -webkit-animation: fadeInLeft 0.8s 1;
+		-moz-animation: fadeInLeft 0.8s 1;
+		-ms-animation: fadeInLeft 0.8s 1;
+		-o-animation: fadeInLeft 0.8s 1;
+		animation: fadeInLeft 0.8s 1;
 	}
 
 	#browser {
@@ -1176,26 +1179,20 @@ ul.updates {
 	/* @group 8.1. ABOUT GRID
 	--------------------------------------*/
 
-	
 	.about_wrapper #grids {
 		display: block;
-		background: url(../images/site/icons/about_grid_baseline.png) 0 4px;
 		position: absolute;
 		width: 100%;
 		height: 100%;
 		opacity: 0.04;
 		z-index: -1;
 		top: 0;
-		background-attachment: fixed;
 		-webkit-animation: fadeIn 1.8s 1;
 		-moz-animation: fadeIn 1.8s 1;
 		-ms-animation: fadeIn 1.8s 1;
 		-o-animation: fadeIn 1.8s 1;
 		animation: fadeIn 1.8s 1;
-		
-		
-	
-}
+	}
 	.about_wrapper #grids .grid {
 		display: none;
 		height: 100%;
@@ -1215,7 +1212,22 @@ ul.updates {
 		border-right: 1px dotted #fff;
 		border-left: 1px dotted #fff;
 	}
-
+	
+	.baseline_grid {
+		background: url(../images/site/icons/about_grid_baseline.png);
+		-webkit-animation: fadeIn 1.8s 1;
+		-moz-animation: fadeIn 1.8s 1;
+		-ms-animation: fadeIn 1.8s 1;
+		-o-animation: fadeIn 1.8s 1;
+		animation: fadeIn 1.8s 1;
+		width: 100%;
+		height: 100%;
+		position: fixed;
+		left: 0;
+		top: 4px;
+		opacity: 0.03;
+		z-index: -1;
+	}
 		/* @group 8.1.1. 
 		----------------------------------*/
 		@media only screen and (max-width: 599px) {
@@ -1295,7 +1307,7 @@ ul.updates {
 	
 	100% {
 		opacity: 1;
-		-webkit-transform: translateY(0);
+		-webkit-transform: translateY(0px);
 	}
 }
 
@@ -1307,7 +1319,7 @@ ul.updates {
 	
 	100% {
 		opacity: 1;
-		-moz-transform: translateY(0);
+		-moz-transform: translateY(0px);
 	}
 }
 
@@ -1319,7 +1331,7 @@ ul.updates {
 	
 	100% {
 		opacity: 1;
-		-ms-transform: translateY(0);
+		-ms-transform: translateY(0px);
 	}
 }
 
@@ -1331,7 +1343,7 @@ ul.updates {
 	
 	100% {
 		opacity: 1;
-		-o-transform: translateY(0);
+		-o-transform: translateY(0px);
 	}
 }
 
@@ -1343,7 +1355,7 @@ ul.updates {
 	
 	100% {
 		opacity: 1;
-		transform: translateY(0);
+		transform: translateY(0px);
 	}
 }
 
@@ -1404,6 +1416,66 @@ ul.updates {
 	100% {
 		opacity: 0;
 		transform: translateY(20px);
+	}
+}
+
+@-webkit-keyframes fadeInLeft {
+	0% {
+		opacity: 0;
+		-webkit-transform: translateX(-20px);
+	}
+	
+	100% {
+		opacity: 1;
+		-webkit-transform: translateX(0);
+	}
+}
+
+@-moz-keyframes fadeInLeft {
+	0% {
+		opacity: 0;
+		-moz-transform: translateX(-20px);
+	}
+	
+	100% {
+		opacity: 1;
+		-moz-transform: translateX(0);
+	}
+}
+
+@-ms-keyframes fadeInLeft {
+	0% {
+		opacity: 0;
+		-ms-transform: translateX(-20px);
+	}
+	
+	100% {
+		opacity: 1;
+		-ms-transform: translateX(0);
+	}
+}
+
+@-o-keyframes fadeInLeft {
+	0% {
+		opacity: 0;
+		-o-transform: translateX(-20px);
+	}
+	
+	100% {
+		opacity: 1;
+		-o-transform: translateX(0);
+	}
+}
+
+@keyframes fadeInLeft {
+	0% {
+		opacity: 0;
+		transform: translateX(-20px);
+	}
+	
+	100% {
+		opacity: 1;
+		transform: translateX(0);
 	}
 }
 
